[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://asset/theme/ButtonMenu.tres" type="Theme" id=2]
[ext_resource path="res://asset/texture/fond.png" type="Texture" id=3]
[ext_resource path="res://asset/texture/nube_max1.png" type="Texture" id=4]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 128.0
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
flatness = 1.0
gravity = Vector3( 98, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel_random = 1.0
angle = 2.0
angle_random = 1.0
scale = 2.0
scale_random = 1.0
anim_offset_random = 1.0

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )

[node name="Play" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -172.0
margin_right = 63.0
margin_bottom = -108.0
theme = ExtResource( 2 )
text = "Play"

[node name="Config" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -44.0
margin_right = 64.0
margin_bottom = 20.0
theme = ExtResource( 2 )
text = "Config"

[node name="Exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 84.0
margin_right = 64.0
margin_bottom = 148.0
theme = ExtResource( 2 )
text = "Exit"

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -96, 198 )
lifetime = 6.0
process_material = SubResource( 1 )
texture = ExtResource( 4 )

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Config" to="." method="_on_Config_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
